Changes sequence and styling to make sure that the buy button is more likely to be visible on mobile

--- a/frontend/src/Components/BuyEventTicket/components/BuyTicketModal.module.scss
+++ b/frontend/src/Components/BuyEventTicket/components/BuyTicketModal.module.scss
@@ -44,16 +44,13 @@
 .ticket_selection_container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 0.5rem;
   flex-direction: column;
-  padding-bottom: 1rem;
 }
 
 .ticket_select {
   display: flex;
   border-bottom: 1px solid $grey-4;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-top: 0.15rem;
   flex: 0.5;
   align-items: center;
   flex-wrap: wrap;
@@ -75,9 +72,7 @@
 
 .ticket_type {
   background-color: $grey-4;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  margin-bottom: 1rem;
+  border-radius: 0.15rem;
   @include theme-dark {
     background-color: $theme-dark-input-bg;
   }
